merge  from 1760 and refactor