@@ -2,6 +2,7 @@ package uk.gov.hmcts.reform.sscs.ccd.presubmit.tribunalcommunication;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.when;
@@ -14,8 +15,6 @@ import java.util.ArrayList;
 import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.Mock;
 import uk.gov.hmcts.reform.sscs.ccd.callback.Callback;
 import uk.gov.hmcts.reform.sscs.ccd.callback.PreSubmitCallbackResponse;
@@ -43,7 +42,7 @@ public class TribunalCommunicationAboutToSubmitHandlerTest {
     public void setUp() {
         openMocks(this);
 
-        handler = new TribunalCommunicationAboutToSubmitHandler(idamService);
+        handler = new TribunalCommunicationAboutToSubmitHandler(idamService, true);
 
         sscsCaseData = SscsCaseData.builder().ccdCaseId("ccdId").build();
 
@@ -71,15 +70,15 @@ public class TribunalCommunicationAboutToSubmitHandlerTest {
         String expectedUserName = "Test User";
 
         // Create empty list of communications
-        List<TribunalCommunication> existingComs = new ArrayList<>();
-        TribunalCommunicationDetails details = TribunalCommunicationDetails.builder()
+        List<CommunicationRequest> existingComs = new ArrayList<>();
+        FtaCommunicationFields details = FtaCommunicationFields.builder()
                 .tribunalRequestTopic(expectedTopic)
                 .tribunalRequestQuestion(expectedQuestion)
                 .tribunalCommunications(existingComs)
                 .tribunalRequestType(TribunalRequestType.NEW_REQUEST)
                 .build();
 
-        sscsCaseData.setTribunalCommunicationsDetails(details);
+        sscsCaseData.setCommunicationFields(details);
 
         // Mock user details
         UserDetails userDetails = UserDetails.builder()
@@ -92,19 +91,41 @@ public class TribunalCommunicationAboutToSubmitHandlerTest {
                 handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
 
         // Verify a new Tribunal communication was added
-        List<TribunalCommunication> resultComs = response.getData().getTribunalCommunicationsDetails().getTribunalCommunications();
+        List<CommunicationRequest> resultComs = response.getData().getCommunicationFields().getTribunalCommunications();
 
-        assertEquals(2, resultComs.size());
+        assertEquals(1, resultComs.size());
 
-        TribunalCommunicationFields addedCom = resultComs.get(0).getValue();
+        CommunicationRequestDetails addedCom = resultComs.getFirst().getValue();
         assertEquals(expectedTopic, addedCom.getRequestTopic());
         assertEquals(expectedQuestion, addedCom.getRequestMessage());
         assertEquals(expectedUserName, addedCom.getRequestUserName());
         assertNotNull(addedCom.getRequestDateTime());
 
         // Verify the enum values are correctly set
-        assertEquals(TribunalCommunicationFilter.INFO_REQUEST_FROM_FTA, response.getData().getTribunalCommunicationsDetails().getTribunalCommunicationFilter());
-        assertEquals(FtaCommunicationFilter.AWAITING_INFO_FROM_TRIBUNAL, response.getData().getTribunalCommunicationsDetails().getFtaCommunicationFilter());
+        assertEquals(TribunalCommunicationFilter.AWAITING_INFO_FROM_TRIBUNAL, response.getData().getCommunicationFields().getTribunalCommunicationFilter());
+        assertEquals(FtaCommunicationFilter.INFO_REQUEST_FROM_FTA, response.getData().getCommunicationFields().getFtaCommunicationFilter());
+    }
+
+    @Test
+    public void givenFlagOff_shouldDoNothing() {
+        List<CommunicationRequest> existingComs = new ArrayList<>();
+        FtaCommunicationFields details = FtaCommunicationFields.builder()
+            .tribunalRequestTopic("someTopic")
+            .tribunalRequestQuestion("someQuestion")
+            .tribunalCommunications(existingComs)
+            .tribunalRequestType(TribunalRequestType.NEW_REQUEST)
+            .build();
+
+        sscsCaseData.setCommunicationFields(details);
+        handler = new TribunalCommunicationAboutToSubmitHandler(idamService, false);
+
+        PreSubmitCallbackResponse<SscsCaseData> response =
+            handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
+
+        List<CommunicationRequest> resultComs = response.getData().getCommunicationFields().getTribunalCommunications();
+        assertEquals(0, resultComs.size());
+        assertNull(response.getData().getCommunicationFields().getTribunalCommunicationFilter());
+        assertNull(response.getData().getCommunicationFields().getFtaCommunicationFilter());
     }
 
     @Test
@@ -115,33 +136,33 @@ public class TribunalCommunicationAboutToSubmitHandlerTest {
         String expectedUserName = "Test User";
 
         // Create list of existing communications
-        TribunalCommunication tribunalCommunicationPast = TribunalCommunication.builder().value(
-                TribunalCommunicationFields.builder()
+        CommunicationRequest tribunalCommunicationPast = CommunicationRequest.builder().value(
+                CommunicationRequestDetails.builder()
                         .requestTopic("Past existing Topic")
                         .requestMessage("Past existing Question")
                         .requestDateTime(LocalDateTime.now().minusYears(2))
                         .requestUserName("Past existing user")
-                        .requestResponseDue(LocalDateTime.now().minusYears(1))
+                        .requestResponseDueDate(LocalDateTime.now().minusYears(1))
                         .build()
                 ).build();
-        TribunalCommunication tribunalCommunicationFuture = TribunalCommunication.builder().value(
-                TribunalCommunicationFields.builder()
+        CommunicationRequest tribunalCommunicationFuture = CommunicationRequest.builder().value(
+                CommunicationRequestDetails.builder()
                         .requestTopic("Future existing Topic")
                         .requestMessage("Future existing Question")
                         .requestDateTime(LocalDateTime.now().plusYears(1))
                         .requestUserName("Future existing user")
-                        .requestResponseDue(LocalDateTime.now().plusYears(2))
+                        .requestResponseDueDate(LocalDateTime.now().plusYears(2))
                         .build()
                 ).build();
-        List<TribunalCommunication> existingComs = new ArrayList<>(List.of(tribunalCommunicationFuture, tribunalCommunicationPast));
-        TribunalCommunicationDetails details = TribunalCommunicationDetails.builder()
+        List<CommunicationRequest> existingComs = new ArrayList<>(List.of(tribunalCommunicationFuture, tribunalCommunicationPast));
+        FtaCommunicationFields details = FtaCommunicationFields.builder()
                 .tribunalRequestTopic(expectedTopic)
                 .tribunalRequestQuestion(expectedQuestion)
                 .tribunalRequestType(TribunalRequestType.NEW_REQUEST)
                 .tribunalCommunications(existingComs)
                 .build();
 
-        sscsCaseData.setTribunalCommunicationsDetails(details);
+        sscsCaseData.setCommunicationFields(details);
 
         // Mock user details
         UserDetails userDetails = UserDetails.builder()
@@ -154,12 +175,12 @@ public class TribunalCommunicationAboutToSubmitHandlerTest {
                 handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
 
         // Verify a new Tribunal communication was added
-        List<TribunalCommunication> resultComs = response.getData().getTribunalCommunicationsDetails().getTribunalCommunications();
+        List<CommunicationRequest> resultComs = response.getData().getCommunicationFields().getTribunalCommunications();
 
-        assertEquals(6, resultComs.size());
+        assertEquals(3, resultComs.size());
 
         assertEquals(tribunalCommunicationFuture, resultComs.getFirst());
-        TribunalCommunicationFields addedCom = resultComs.get(2).getValue();
+        CommunicationRequestDetails addedCom = resultComs.get(1).getValue();
         assertEquals(expectedTopic, addedCom.getRequestTopic());
         assertEquals(expectedQuestion, addedCom.getRequestMessage());
         assertEquals(expectedUserName, addedCom.getRequestUserName());
@@ -167,8 +188,8 @@ public class TribunalCommunicationAboutToSubmitHandlerTest {
         assertEquals(tribunalCommunicationPast, resultComs.getLast());
 
         // Verify the enum values are correctly set
-        assertEquals(TribunalCommunicationFilter.INFO_REQUEST_FROM_FTA, response.getData().getTribunalCommunicationsDetails().getTribunalCommunicationFilter());
-        assertEquals(FtaCommunicationFilter.AWAITING_INFO_FROM_TRIBUNAL, response.getData().getTribunalCommunicationsDetails().getFtaCommunicationFilter());
+        assertEquals(TribunalCommunicationFilter.AWAITING_INFO_FROM_TRIBUNAL, response.getData().getCommunicationFields().getTribunalCommunicationFilter());
+        assertEquals(FtaCommunicationFilter.INFO_REQUEST_FROM_FTA, response.getData().getCommunicationFields().getFtaCommunicationFilter());
     }
 
     @Test
@@ -178,14 +199,14 @@ public class TribunalCommunicationAboutToSubmitHandlerTest {
         String expectedQuestion = "Test Question";
         String expectedUserName = "Test User";
 
-        TribunalCommunicationDetails details = TribunalCommunicationDetails.builder()
+        FtaCommunicationFields details = FtaCommunicationFields.builder()
                 .tribunalRequestTopic(expectedTopic)
                 .tribunalRequestQuestion(expectedQuestion)
                 .tribunalRequestType(TribunalRequestType.NEW_REQUEST)
                 .tribunalCommunications(null) // Explicitly set to null
                 .build();
 
-        sscsCaseData.setTribunalCommunicationsDetails(details);
+        sscsCaseData.setCommunicationFields(details);
 
         // Mock user details
         UserDetails userDetails = UserDetails.builder()
@@ -198,61 +219,12 @@ public class TribunalCommunicationAboutToSubmitHandlerTest {
                 handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
 
         // Verify a new Tribunal communication was added
-        List<TribunalCommunication> resultComs = response.getData().getTribunalCommunicationsDetails().getTribunalCommunications();
+        List<CommunicationRequest> resultComs = response.getData().getCommunicationFields().getTribunalCommunications();
 
         assertNotNull(resultComs);
 
         // Verify the enum values are correctly set
-        assertEquals(TribunalCommunicationFilter.INFO_REQUEST_FROM_FTA, response.getData().getTribunalCommunicationsDetails().getTribunalCommunicationFilter());
-        assertEquals(FtaCommunicationFilter.AWAITING_INFO_FROM_TRIBUNAL, response.getData().getTribunalCommunicationsDetails().getFtaCommunicationFilter());
-    }
-
-    @ParameterizedTest
-    @MethodSource(value = {"dueDateParameters"})
-    public void calculateDueDate_shouldAdjustForWeekends(LocalDateTime inputDate, LocalDateTime expectedDueDate) {
-        LocalDateTime actualDueDate = handler.dueDate(inputDate);
-
-        assertEquals(expectedDueDate, actualDueDate);
-    }
-
-    @SuppressWarnings("unused")
-    private static Object[] dueDateParameters() {
-        return new Object[] {
-            // Normal weekday -> Weekday (2 days later)
-            new Object[] {
-                    LocalDateTime.of(2023, 6, 5, 10, 0), // Monday
-                    LocalDateTime.of(2023, 6, 7, 10, 0)  // Wednesday (2 days later)
-            },
-            // Normal weekday -> Weekday (2 days later)
-            new Object[] {
-                    LocalDateTime.of(2023, 6, 6, 10, 0), // Tuesday
-                    LocalDateTime.of(2023, 6, 8, 10, 0)  // Thursday (2 days later)
-            },
-            // Normal weekday -> Weekday (2 days later)
-            new Object[] {
-                    LocalDateTime.of(2023, 6, 7, 10, 0), // Wednesday
-                    LocalDateTime.of(2023, 6, 9, 10, 0)  // Friday (2 days later)
-            },
-            // Thursday -> Add 2 days = Saturday, should be moved to Monday (4 days later)
-            new Object[] {
-                    LocalDateTime.of(2023, 6, 8, 10, 0), // Thursday
-                    LocalDateTime.of(2023, 6, 12, 10, 0) // Monday (4 days later)
-            },
-            // Friday -> Add 2 days = Sunday, should be moved to Monday (3 days later)
-            new Object[] {
-                    LocalDateTime.of(2023, 6, 9, 10, 0), // Friday
-                    LocalDateTime.of(2023, 6, 13, 10, 0) // Tuesday (4 days later)
-            },
-            // Saturday -> Add 2 days = Monday (normal)
-            new Object[] {
-                    LocalDateTime.of(2023, 6, 10, 10, 0), // Saturday
-                    LocalDateTime.of(2023, 6, 12, 10, 0)  // Monday (2 days later)
-            },
-            // Sunday -> Add 2 days = Tuesday (normal)
-            new Object[] {
-                    LocalDateTime.of(2023, 6, 11, 10, 0), // Sunday
-                    LocalDateTime.of(2023, 6, 13, 10, 0)  // Tuesday (2 days later)
-            }
-        };
+        assertEquals(TribunalCommunicationFilter.AWAITING_INFO_FROM_TRIBUNAL, response.getData().getCommunicationFields().getTribunalCommunicationFilter());
+        assertEquals(FtaCommunicationFilter.INFO_REQUEST_FROM_FTA, response.getData().getCommunicationFields().getFtaCommunicationFilter());
     }
 }
